# headroomgate

./: .gitignore  BUILD.md  CHANGELOG.md  README.md  pyproject.toml  rebuild.sh  release-notes.md
.compozy/tasks/multi-user-auth-control/: SESSION_BRIDGE.md  SESSION_RESUME.md  _prd-1-admin-cli.md  _prd-2-auth-gateway.md  _prd-2.1-websocket-auth.md  _prd-3-audit-analytics.md
docs/: auth.md
headroom/audit/: __init__.py  access.py  buffer.py  logger.py  models.py  semantic.py  store.py
headroom/auth/: __init__.py  crypto.py  models.py  store.py
headroom/cli/: __init__.py  audit.py  auth.py  main.py
headroom/memory/: easy.py
headroom/memory/backends/: direct_mem0.py  mem0.py
headroom/proxy/: server.py
headroom/usage/: logger.py
openspec/: config.yaml
openspec/changes/admin-cli-user-management/: README.md  tasks.md
openspec/changes/websocket-auth/: design.md  proposal.md  tasks.md
openspec/specs/: DUMMY.md
openspec/specs/admin-cli/: spec.md
openspec/specs/audit-access/: spec.md
openspec/specs/audit-cli/: spec.md
plugins/headroom-auth/: pyproject.toml
plugins/headroom-auth/src/headroom_auth/: __init__.py  cache.py  identity.py  middleware.py  provider_injector.py  rate_limiter.py
scripts/: headroom-claude  headroom-claude-env.template  headroom-connect  headroom-env.template  headroom-setup
tests/audit/: test_access.py  test_buffer.py  test_cli.py  test_semantic.py  test_store.py
tests/auth/: test_cache.py  test_cli.py  test_crypto.py  test_identity.py  test_middleware.py  test_models.py  test_provider_injector.py  test_rate_limiter.py  test_store.py
(+39 files in other folders)
